Fix bug with change password screen. Update login screen to set required=true on inputs. Update manage users screen table so that table cells are truncated with ellipsis if they don't fit on screen.

--- a/frontend/app/styles/page-templates/change-password.scss
+++ b/frontend/app/styles/page-templates/change-password.scss
@@ -16,4 +16,9 @@
   .password-strength-requirement-component {
     margin-bottom: 6px;
   }
+
+  .spinner-wrapper {
+    display: block;
+    margin: -10px 30px 0 0;
+  }
 }
